<resources>
    <string name="app_name">VolleyMaster</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="log_in"><u>Log in</u></string>
    <string name="logo">Logo</string>
    <string name="logo_shadow">Logo shadow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="welcome_to_string">Welcome to</string>
    <string name="volleymaster_string">Volleymaster</string>
    <string name="your_ultimate_volleyball_companion__string">Your ultimate volleyball companion!</string>
    <string name="skill_tutorials">Skill\n
    Tutorials</string>
    <string name="motivationText1">-Start small, practice\n consistently, and watch your\n game reach new heights.</string>
    <string name="pick_your_path">Pick Your Path</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="or_pro">Or pro</string>
    <string name="select_your_level_choose_your_focus_and_let_s_boost_your_game_your_journey_your_pace">Select your level, choose your focus, and let\'s boost your game. Your journey, your pace.</string>
    <string name="goal_tracker">Goal Tracker</string>
    <string name="visualize_your_journey">Visualize your journey</string>
    <string name="monitor_your_achievements">Monitor your achievements</string>
    <string name="community_challenges">Community Challenges</string>
    <string name="join_group_goals_and_compete_with_friends">Join group goals and compete with friends.</string>
    <string name="dive_into_a_world_where_teamwork_meets_competition">Dive into a world where teamwork meets competition.</string>
    <string name="we_love_our_users_become_one_of_them_now">We love our users Become one of them now!</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_up_now_to_get_started_with_an_account">Sign up now to get started with an account.</string>
    <string name="continue_with_other">Continue with Other</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="you_are_planing_to_use_our_platform_as_male">You are planing to use our platform as male?</string>
    <string name="you_are_planing_to_use_our_platform_as_female">You are planing to use our platform as female?</string>
    <string name="you_are_planing_to_use_our_platform_as_other">You are planing to use our platform as other?</string>
    <string name="next">Next</string>
    <string name="_30_kg">30 kg</string>
    <string name="_30">30</string>
    <string name="kg">kg</string>
    <string name="advanced">Advanced</string>
    <string name="elite">Elite</string>
    <string name="_1div7">1/7</string>
    <string name="_2div7">2/7</string>
    <string name="_3div7">3/7</string>
    <string name="_4div7">4/7</string>
    <string name="_5div7">5/7</string>
    <string name="_6div7">6/7</string>
    <string name="_7div7">7/7</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="tell_us_about_yourself">Tell us about yourself!</string>
    <string name="what_s_your_weight">What’s your weight?</string>
    <string name="what_s_your_height">What’s your height?</string>
    <string name="what_s_your_ball_contact_height">What`s your ball contact height?</string>
    <string name="what_s_your_level">What`s your level?</string>
    <string name="what_s_your_goal">What`s your goal?</string>
    <string name="your_age_helps_us_customize_content_and_features_to_better_suit_your_needs">Your age helps us customize content and features to better suit your needs.</string>
    <string name="to_give_you_a_better_experience_we_need_to_know_your_gender">To give you a better experience we need to know your gender</string>
    <string name="your_weight_helps_us_customize_content_and_features_to_better_suit_your_needs">Your weight helps us customize content and features to better suit your needs.</string>
    <string name="we_request_your_height_to_optimize_our_app_s_recommendations_and_features_specifically_for_you">We request your height to optimize our app\'s recommendations and features specifically for you.</string>
    <string name="we_need_to_know_how_well_you_playing_in_the_volleyball_to_optimize_your_training_plan">We need to know how well you playing in the volleyball to optimize your training plan</string>
    <string name="home">Home</string>
    <string name="trainings">Trainings</string>
    <string name="profile">Profile</string>
</resources>