<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    tools:context=".ui.auth.AuthStartPage">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/logotypeOnBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logotype_on_bg_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/signInGoogle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_google_continue"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logotypeOnBG">


    </Button>

    <Button
        android:id="@+id/signInOther"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_other_continue"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/continue_with_other"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/logotypeOnBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInGoogle">


    </Button>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/create_an_account"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/logotypeOnBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_up_now_to_get_started_with_an_account"
        android:textColor="@color/yellow_30_op"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/logotypeOnBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>