<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    android:orientation="vertical"
    tools:context=".ui.onboard.FifthOnBoardScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/communityChallenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/community_challenges"
            android:textAlignment="center"
            android:textColor="@color/yellow_white_light_200"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/beginner"
            android:layout_width="268dp"
            android:layout_height="75dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/join_group_goals_and_compete_with_friends"
            android:textColor="@color/brown"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/communityChallenges" />


        <TextView
            android:id="@+id/tipsText"
            android:layout_width="303dp"
            android:layout_height="135dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/dive_into_a_world_where_teamwork_meets_competition"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView

            android:id="@+id/imageView2"
            android:layout_width="352dp"
            android:layout_height="476dp"
            android:src="@drawable/volley_player_wob_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beginner" />

        <ImageView
            android:id="@+id/nextPage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/arrow_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>